# homecloud_data_pipeline

./: .airflowignore  .gitignore  pyproject.toml
homecloud_data_pipeline/common/: sbanken_api.py
homecloud_data_pipeline/dags/: sbanken_dag.py
