[tool.poetry]
name = "homecloud_data_pipeline"
version = "0.1.0"
description = "The data pipelines for Ruud's Homelab"
authors = ["Ole Martin Ruud <dev@barskern.no>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
Authlib = "^0.15.5"
pandas = "^1.3.4"
apache-airflow = { path = "../airflow", develop = true }

[tool.poetry.dev-dependencies]
black = "^21.10b0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
